--- a/README.adoc
+++ b/README.adoc
@@ -13,8 +13,8 @@ docker pull registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
 * start the cluster locally and create project
 
 ----
-ocp cluster up 
-ocp new-project workshop
+oc cluster up 
+oc new-project workshop
 ----
 
 * deploy project on local cluster
